--- a/main.tex
+++ b/main.tex
@@ -258,18 +258,18 @@
 \newpage
 
 {
-  % TODO: update based on Zenodo info.
   \footnotesize\noindent Cite this book as:
   \begin{verbatim}
-  @book{Verri2025,
-    author = {Filipe Alves Neto Verri},
-    title = {Data Science Project},
-    subtitle = {An Inductive Learning Approach},
-    year = {2025},
-    publisher = {Leanpub},
-    url = {https://github.com/verri/dsp-book},
-    doi = {10.0000/zenodo.0000000},
-    note = {version 0.1},
+  @misc{verri2024datascienceproject,
+    author       = {Verri, Filipe Alves Neto},
+    title        = {Data Science Project},
+    subtitle     = {An Inductive Learning Approach},
+    month        = dec,
+    year         = 2024,
+    publisher    = {Leanpub},
+    version      = {v0.1.0},
+    doi          = {10.5281/zenodo.14498011},
+    url          = {https://leanpub.com/dsp}
   }
   \end{verbatim}
 }
