Preparing to publish on Leanpub.

--- a/main.tex
+++ b/main.tex
@@ -261,17 +261,17 @@
   \footnotesize\noindent Cite this book as:
   \begin{verbatim}
   @misc{verri2024datascienceproject,
-    author       = {Verri, Filipe Alves Neto},
-    title        = {Data Science Project},
-    subtitle     = {An Inductive Learning Approach},
-    month        = dec,
-    year         = 2024,
-    publisher    = {Leanpub},
-    version      = {v0.1.0},
-    doi          = {10.5281/zenodo.14498011},
-    url          = {https://leanpub.com/dsp}
+    author = {Verri, Filipe Alves Neto},
+    title = {Data Science Project: An Inductive Learning Approach},
+    year = 2024,
+    publisher = {Leanpub},
+    version = {v0.1.0},
+    doi = {10.5281/zenodo.14498011},
+    url = {https://leanpub.com/dsp}
   }
   \end{verbatim}
+
+  \noindent\fullcite{verri2024datascienceproject}.
 }
 
 \vfill
