--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,13 @@
+@misc{verri2024datascienceproject,
+  author       = {Verri, Filipe Alves Neto},
+  title        = {Data Science Project: An Inductive Learning Approach},
+  year         = 2024,
+  publisher    = {Leanpub},
+  version      = {v0.1.0},
+  doi          = {10.5281/zenodo.14498011},
+  url          = {https://leanpub.com/dsp},
+}
+
 @article{Benavoli2017,
   author  = {Alessio Benavoli and Giorgio Corani and Janez Dem{\v{s}}ar and Marco Zaffalon},
   title   = {Time for a Change: a Tutorial for Comparing Multiple Classifiers Through Bayesian Analysis},
