--- a/courses.tex
+++ b/courses.tex
@@ -136,3 +136,5 @@ Case studies will be presented during exam weeks.  At most, 3 case studies will 
 presented per day, with 30 minutes for each presentation and 20 minutes for questions.
 
 \thispagestyle{empty}
+
+% vim: set spell spelllang=en:
