--- a/foreword.tex
+++ b/foreword.tex
@@ -35,3 +35,5 @@ challenges of data-driven decision-making. The book will expand your understandi
 inspire you to approach data science projects with a commitment to creating responsible
 and impactful solutions.
 \end{sloppypar}
+
+% vim: spell spelllang=en
