--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -1208,3 +1208,5 @@ is also called a choose function, and is read as ``$n$ choose $k$''.
 %
 % \paragraph{Descent lemma.}  For $f$, a the multivariate Taylor expansion is that
 % $$f(w) = f(v)$$
+
+% vim: spell spelllang=en
