--- a/about.tex
+++ b/about.tex
@@ -98,3 +98,5 @@ I would like to thank the following contributors for their help in improving thi
 \end{itemize}
 
 All contributors have freely waived their rights to the content they contributed to this book.
+
+% vim: set spell spelllang=en:
