--- a/structured.tex
+++ b/structured.tex
@@ -587,7 +587,7 @@ calculating ratios and frequency.
 \cref{tab:messy3}.  This is the most complicated case of messy data.  Usually, one of the
 columns contains the names of the variables, in this case the column \emph{element}.
 
-\begin{tablebox}[label=tab:messy3]{Messy table, adapted from airquality dataset, where variables are stored in both rows and columns.}
+\begin{tablebox}[label=tab:messy3]{Messy table, adapted from molten weather dataset, where variables are stored in both rows and columns.}
   \centering
   \rowcolors{2}{black!10!white}{}
   \begin{tabular}{llllcccc}
