--- a/handling.tex
+++ b/handling.tex
@@ -275,7 +275,7 @@ The domains of the variables are:
   \item $\domainof{\text{subject}} = \left\{\text{Biology}, \text{Chemistry}, \text{Math},
     \text{Physics}\right\}$;
   \item $\domainof{\text{year}} = \mathbb{Z}$; and
-  \item $\domainof{\text{grade}} = \left[0, 10\right] \cup \left\{\missing\right\}$.
+  \item $\domainof{\text{grade}} = \left[0, 10\right]$.
 \end{itemize}
 
 Of course, in practice, we have no guarantee that the data we have is complete nor a
