--- a/inductive.tex
+++ b/inductive.tex
@@ -220,7 +220,7 @@ functions. Choosing the loss
 \end{equation*}
 the risk $\eqref{eq:risk}$ becomes the probability of
 classification error.  The function $f_\theta$, in this case, is called a \emph{classifier}
-and $y$ is called the \emph{label}.
+and $y$ is called the \emph{label} or \emph{class}.
 
 \subsubsection{Regression estimation task}
 
