--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{dspbook}
+\documentclass[print]{dspbook}
 
 \addbibresource{references.bib}
 \input{glossary}
@@ -53,9 +53,10 @@
 \vfill
 
 {
-  \footnotesize\noindent\color{red}
-  \textbf{Disclaimer:} This version is a work in progress.  Proofreading and professional editing are
-  still pending.
+  \footnotesize\noindent
+  \textbf{Disclaimer:} This book is a work in progress.  The print version may not be up
+  to date with the latest changes.  The latest version is always available at
+  \url{https://leanpub.com/dsp}.
 }
 
 \vspace{0.5cm}
