Updated some disclaimers.

--- a/main.tex
+++ b/main.tex
@@ -287,8 +287,9 @@
 \footnotesize\noindent
 The book is typeset with \XeTeX{} using the Memoir class.  All figures are
 original and created with Ti\textit{k}Z.  Proudly written in
-\href{https://neovim.io/}{Neovim} with the assistance of
+\href{https://neovim.io/}{Neovim}.  \LaTeX{} code written with the assistance of
 \href{https://github.com/features/copilot}{GitHub Copilot}.
+All the text is original and not AI-generated.
 The book cover image was created with the assistance of
 \href{https://gemini.google.com}{Gemini} and \href{https://openai.com/dall-e-2}{DALL·E 2}.
 We use the beautiful \href{https://www.stixfonts.org/}{STIX fonts} for text and math.
