Removed orcid from print version.

--- a/frontmatter/foreword.tex
+++ b/frontmatter/foreword.tex
@@ -1,6 +1,6 @@
 \chapter{Foreword}
 
-\chapterprecishere{\raggedleft\textup{by} \textsc{Ana Carolina Lorena}~\orcidlink{0000-0002-6140-571X}}
+\chapterprecishere{\raggedleft\textup{by} \textsc{Ana Carolina Lorena}}
 
 Data is now a ubiquitous presence and is collected every time and everywhere. However, the
 real challenge lies in harnessing this data to generate actionable insights that guide
