--- a/main.tex
+++ b/main.tex
@@ -97,7 +97,7 @@ permission. All rights reserved.
 \vspace{0.5cm}
 {
 \footnotesize\noindent
-\thetitle{} © 2023--\the\year{} by \theauthor{}~\orcidlink{0000-0002-8240-5129} is licensed under
+\thetitle{} © 2023--\the\year{} by \theauthor{} is licensed under
 Attribution-NonCommercial-NoDerivatives 4.0 International. To view a copy of this license,
 visit
 \href{http://creativecommons.org/licenses/by-nc-nd/4.0/}{creativecommons.org/licenses/by-nc-nd/4.0}.
